tests/good/main/presence_main.go
package main;

func main(){};

/*
== Expected compiler output ==
*/
